@@ -4,6 +4,6 @@ public abstract class Player
 	public abstract Move promptMove();
 	
 	//what else do all players need?
-	//remember that human players and computer players are two different kidn of players
+	//remember that human players and computer players are two different kinds of players
 
 }
